--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jeevsssss.github.io",
+  "homepage": "https://jeevsssss.github.io/rick-and-morty",
   "name": "rick-and-morty",
   "version": "0.1.0",
   "private": true,
